Exercises/CSS Exercise/CSS/style.css
body {
    width: 100vw;
    height: 100vh;
    margin:0;

    color: rgb(242 242 242);
    background-color: black;
    display: flex;
    justify-content: center;
}
.site-container__blue-bg {
    width: 80%;
    background-color: rgb(16 171 253);

    display: flex;
    justify-content: center;
    align-items: center;
    /*difference between align items and align-content*/
}

.site-container__black-border {
    width: 90%;
    height: 88%;
    background-color: rgb(242 242 242) ;
    
    border: 10px solid black;
    border-radius: 35px;

    display: grid;
    grid-template: repeat(12, 1fr)/repeat(12, 1fr);
}


.site-container__sidebar {
    grid-column: 1 / span 3;
    grid-row: 1 / span 12;
    border-radius: 20px 0px 0px 20px;
    background-color: rgb(242 242 242) ;
}
/* [Holy Grail Layout]: https://1linelayouts.glitch.me/ */
.site-container__content {
    grid-area: 1 / 4 / span 12 / span 9;

    
    border-radius: 0px 20px 20px 0px;
    background-image: url("./assets/ko-tao-island-1500x1088-jpeg.jpeg");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: left;

    display: grid;
    grid-template-rows: auto 1fr auto;
}

/* [Line Up]:  https://1linelayouts.glitch.me/*/
.site-container__nav {
    padding: 2rem;
    grid-column: 4 / span 9;
    
    display: flex;
    padding: 1rem;
    justify-content: space-around;

    list-style-type: none;
    font-weight: 600;
}

.site-container__nav li
{
    padding: 0.3rem;
}

#site-dropdown {
    display: flex;
    gap: 0.1rem;
}

#site-dropdown__flag {
    width: 30px;
}

#site-button__sign-up {
    color: rgb(30 120 181);
    background-color: rgb(255 255 255);
    border-radius: 10%;
}
/* NAV END */

/* MAIN */
.site-container__main {
    grid-column: 2 / span 10;
    grid-row: 3/ span 8;

    display: grid;
    grid-template: repeat(12,1fr) /repeat(12,1fr);/*card and text*/
}

.site-container__main-text {
    grid-column: 7/ span 3;
    grid-row: 3/span 5;
    padding: 5rem;
    font-size: xx-large;
    font-weight: 200;
    line-height: 25px;
}


.site-container__main-card {
    grid-row: 1/ span 12;
    grid-column: 1/ span 5;
    background-color: rgb(255 255 255);
    color: grey;

    border-radius: 1em;
    box-shadow: 0px 0px 10px rgb(200 200 200);
   
    display: grid;
    grid-template: 1fr 6fr/ 1fr; 
}
.site-main-card__nav{
    grid-column: 1/span 4;

    display: grid;
    grid-template-columns: repeat(4, 1fr);
    align-content: center;
}

.site-main-card__nav-item {
    display: flex;
    flex-direction: column;
    align-items: center;
    border-bottom: 0.1em solid  rgb(200 200 200);
    padding-bottom: 0.8em;
} 
div .site-main-card__nav-item:first-of-type{
    color: rgb(13 172 253);
    border-bottom: 0.1em solid rgb(13 172 253);
} 
/* [Row wrap](https://www.youtube.com/watch?v=hwbqquXww-U) */
.site-main-card__form {
    grid-column: inherit;
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
    padding: 2em;
}

/* [inputs share row]:https://css-tricks.com/snippets/css/a-guide-to-flexbox/ */
.site-main-card__form-input{
    background-color: white;
    flex: 0 1 40%;

    display: flex;
    flex-direction: column;
    align-items: flex-start;
}

.site-main-card__form-input > *{
    padding: 0.2em;
    width: 100%;
    height: fit-content;
}
.site-main-card__form-input div:last-of-type {
    border-bottom: 1px solid rgb(200 200 200);;
    color: black;
    display: flex;
} 

.w-100 {
    flex: 0 1 100%
}

.site-main-card__form-button{
    display: flex;
    justify-content: center;
    align-items: center;
}

.site-main-card__form-input button{
    width: 100%;
    height: 80%;
    background-color: rgb(16 171 253);
    color: rgb(255 255 255);;
    border: none;
    border-radius: 0.75em;
} 
/* FOOTER */

